MyFirstForceProject/src/objects/Levis_shirts__c.object
<CustomObject>
    <description>Shirts sold and available in Levis stores</description>
    <fields>
        <fullName>Shirt_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>clearance status</description>
        <label>Shirt_Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shirt_URL__c</fullName>
        <description>URL for shirt image</description>
        <label>Shirt_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Shirt_cloth__c</fullName>
        <defaultValue>&quot;Not-Specified&quot;</defaultValue>
        <description>cloth pattern/type</description>
        <label>Shirt_cloth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shirt_discount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>discount on shirts</description>
        <label>Shirt_discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shirt_size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Shirt&apos;s size</description>
        <label>Shirt_size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shirts_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shirts_Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shirt_price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>price without discount</description>
        <label>shirt_price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Levis Shirts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Product_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Levis Shirts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>